--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <script src="app.js"></script>
     <title>Home</title>
   </head>
   <body>
-    <h1>TEST</h1>
+    <nav class="navbar navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand me-auto" href="#aboutMe">About Me</a>
+        <a class="navbar-brand me-auto" href="#portfolio">Portfolio</a>
+        <a class="navbar-brand me-auto" href="#links">Links</a>
+        <div class="col-8"></div>
+      </div>
+    </nav>
+    <div id="aboutMe">
+      <h1 class="text-center">About Me</h1>
+      <!--pic, hey name max, skill bar chart?-->
+    </div>
+    <div class="bg-dark" id="portfolio">
+      <h1 class="text-center text-light">Portfolio</h1>
+      <!--organize by class/language, change portfolio navbar to dropdown-->
+    </div>
+    <div id="links">
+      <!--linkedin, github, email, apple music-->
+    </div>
   </body>
 </html>
