--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <title>Home</title>
   </head>
   <body>
+    <!--make it all responsive-->
     <nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand me-auto" href="#aboutMe">About Me</a>
