--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="app.js"></script>
-    <title>Home</title>
+    <title>Hire Max Maillet</title>
   </head>
   <body>
     <nav class="navbar navbar-light navbar-expand-md bg-dark">
