--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container-fluid">
         <a class="navbar-brand text-light" href="#">Home</a>
         <button
-          class="navbar-toggler"
+          class="navbar-toggler navbar-dark border-light"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent"
