--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
               >
                 Portfolio
               </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">C#</a></li>
-                <li><a class="dropdown-item" href="#">JavaScript</a></li>
-                <li><a class="dropdown-item" href="#">Java</a></li>
-                <li><a class="dropdown-item" href="#">PHP</a></li>
+              <ul class="dropdown-menu bg-dark">
+                <li><a class="dropdown-item text-light" href="#">C#</a></li>
+                <li>
+                  <a class="dropdown-item text-light" href="#">JavaScript</a>
+                </li>
+                <li><a class="dropdown-item text-light" href="#">Java</a></li>
+                <li><a class="dropdown-item text-light" href="#">PHP</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -91,17 +93,6 @@
       <div class="container-fluid col-6">
         <ul class="list-group">
           <a
-            href="mailto: max.maillet2002@gmail.com"
-            class="list-group-item list-group-item-action border-secondary"
-          >
-            <img
-              src="https://pic.onlinewebfonts.com/svg/img_533640.png"
-              width="32"
-              height="22"
-            />
-            Email
-          </a>
-          <a
             href="https://www.linkedin.com/in/maxmaillet/"
             class="list-group-item list-group-item-action border-secondary"
             aria-current="true"
@@ -112,6 +103,17 @@
               height="32"
             />
             LinkedIn
+          </a>
+          <a
+            href="mailto: max.maillet2002@gmail.com"
+            class="list-group-item list-group-item-action border-secondary"
+          >
+            <img
+              src="https://pic.onlinewebfonts.com/svg/img_533640.png"
+              width="32"
+              height="22"
+            />
+            Email
           </a>
           <a
             href="https://github.com/maxmaillet"
