--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>Hire Max Maillet</title>
   </head>
   <body>
-    <nav class="navbar navbar-light navbar-expand-md bg-dark">
+    <nav class="navbar navbar-light navbar-expand-md bg-dark fixed-top mb-5">
       <div class="container-fluid">
         <a class="navbar-brand text-light" href="#">Home</a>
         <button
@@ -70,7 +70,7 @@
         </div>
       </div>
     </nav>
-    <div class="bg-dark pb-3" id="aboutMe">
+    <div class="bg-dark pb-3 mt-5" id="aboutMe">
       <h1 class="text-center text-light py-3">About Me</h1>
       <div class="container-fluid col-6 col-sm-4 col-lg-3 col-xl-2">
         <img src="pic.JPG" class="rounded-circle img-fluid" />
