--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link href="prism.css" rel="stylesheet" />
+    <link rel="icon" href="favicon.ico" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="app.js"></script>
+    <script src="prism.js"></script>
     <title>Hire Max Maillet</title>
   </head>
   <body>
@@ -72,8 +74,8 @@
     </nav>
     <div class="bg-dark pb-3 mt-5" id="aboutMe">
       <h1 class="text-center text-light py-3">About Me</h1>
-      <div class="container-fluid col-6 col-sm-4 col-lg-3 col-xl-2">
-        <img src="pic.JPG" class="rounded-circle img-fluid" />
+      <div class="container-fluid col-sm-4 col-lg-3 col-xl-2">
+        <img src="pic.jpg" class="rounded-circle img-fluid" />
       </div>
       <p class="container-fluid text-light col-8 pt-4">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio
@@ -81,14 +83,38 @@
         ratione dolor aspernatur esse animi eligendi soluta, quis cum
         necessitatibus, commodi tenetur!
       </p>
-      <!--pic, hey name max, skill bar chart?-->
     </div>
-    <div id="portfolio">
+    <div class="mb-5" id="portfolio">
       <h1 class="text-center pt-1">Portfolio</h1>
-      <!--organize by class/language, change portfolio navbar to dropdown-->
+      <div class="container-fluid col-11 col-sm-9 col-md-8 col-lg-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">My Project</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+          <div class="card-body">
+            <pre class="line-numbers match-braces">
+                <code class="language-css">
+                 #div1 {
+                    background-color: #ff0000;
+                    color: #ffffff;
+                    font-size: 16px;
+                    text-align: center;
+                    border-radius: 10px;
+                 }
+                </code>
+              </pre>
+          </div>
+          <div class="card-body">
+            <a href="#" class="btn btn-secondary">View on GitHub</a>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="bg-dark pb-5" id="contactMe">
-      <!--linkedin, github, email, apple music-->
       <h1 class="text-center text-light pt-1">Contact Me</h1>
       <div class="container-fluid col-6">
         <ul class="list-group">
