--- a/index.html
+++ b/index.html
@@ -92,11 +92,15 @@
       <div class="container-fluid col-6 col-sm-4 col-lg-3 col-xl-2">
         <img src="pic.jpg" class="rounded-circle img-fluid" />
       </div>
-      <p class="container-fluid text-light col-8 pt-4">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio
-        perferendis labore non nisi minus itaque! Laborum voluptatem explicabo
-        ratione dolor aspernatur esse animi eligendi soluta, quis cum
-        necessitatibus, commodi tenetur!
+      <p class="container-fluid text-light col-8 col-md-6 pt-4 fs-5">
+        &emsp;Hey, my name's Max. I'm an aspiring software developer and
+        currently a student at NBCC graduating in June 2023, in my free time you
+        can catch me spinning some records or watching the Boston Celtics. Over
+        the past two years I've gained experience in C# with Windows Forms and
+        ASP.NET and in Java with Java SE and Java EE, I've also built responsive
+        web apps using Bootstrap 5, React, node.js, and PHP. I also have
+        experience using both MySQL and MongoDB databases. Feel free to contact
+        me anytime.
       </p>
     </div>
     <div class="mb-5" id="portfolio">
