--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <div class="container-fluid col-6 col-sm-4 col-lg-3 col-xl-2">
         <img src="pic.jpg" class="rounded-circle img-fluid" />
       </div>
-      <p class="container-fluid text-light col-8 col-md-6 pt-4 fs-5">
+      <p class="container-fluid text-light col-10 col-lg-8 col-xl-6 pt-4 fs-5">
         &emsp;Hey, my name's Max. I'm an aspiring software developer and
         currently a student at NBCC graduating in June 2023, in my free time you
         can catch me spinning some records or watching the Boston Celtics. Over
