fixed scroll, navbar collapse still not working

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       crossorigin="anonymous"
     />
     <link href="prism.css" rel="stylesheet" />
+    <style>
+      .jump {
+        scroll-margin-top: calc(25px + 2.5em);
+      }
+    </style>
     <link rel="icon" href="favicon.ico" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -90,7 +95,7 @@
       </div>
     </nav>
 
-    <div class="bg-dark pb-3 mt-5" id="aboutMe">
+    <div class="bg-dark pb-3 mt-5 jump" id="aboutMe">
       <h1 class="text-center text-light py-3">About Me</h1>
       <div class="container-fluid col-6 col-sm-4 col-lg-3 col-xl-2">
         <img src="pic.jpg" class="rounded-circle img-fluid" />
@@ -112,7 +117,7 @@
     <div class="mb-5" id="portfolio">
       <h1 class="text-center pt-1">Portfolio</h1>
 
-      <div class="container-fluid" id="c">
+      <div class="container-fluid jump" id="c">
         <div class="container-fluid col-11 col-sm-10 col-xl-9 my-2">
           <div class="card">
             <div class="card-body">
@@ -147,7 +152,7 @@
         </div>
       </div>
 
-      <div class="container-fluid" id="java">
+      <div class="container-fluid jump" id="java">
         <div class="container-fluid col-11 col-sm-10 col-xl-9 my-2">
           <div class="card">
             <div class="card-body">
@@ -188,7 +193,7 @@
         </div>
       </div>
 
-      <div class="container-fluid" id="javascript">
+      <div class="container-fluid jump" id="javascript">
         <div class="container-fluid col-11 col-sm-10 col-xl-9 my-2">
           <div class="card">
             <div class="card-body">
@@ -315,7 +320,7 @@
         </div>
       </div>
 
-      <div class="container-fluid" id="php">
+      <div class="container-fluid jump" id="php">
         <div class="container-fluid col-11 col-sm-10 col-xl-9 my-2">
           <div class="card">
             <div class="card-body">
@@ -369,7 +374,7 @@
       </div>
     </div>
 
-    <div class="bg-dark pb-5" id="contactMe">
+    <div class="bg-dark pb-5 jump" id="contactMe">
       <h1 class="text-center text-light pt-1">Contact Me</h1>
       <div class="container-fluid col-6">
         <ul class="list-group">
